--- a/Savio/FiveDigitVerificationViewController/FiveDigitVerificationViewController.xib
+++ b/Savio/FiveDigitVerificationViewController/FiveDigitVerificationViewController.xib
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -32,18 +35,18 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="savivo-logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="Oqd-I4-ww3">
-                    <frame key="frameInset" minX="281" minY="50" width="40" height="40"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="savivo-logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="Oqd-I4-ww3">
+                    <rect key="frame" x="168" y="50" width="40" height="40"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="40" id="Esx-OH-HMA"/>
                         <constraint firstAttribute="height" constant="40" id="dpE-lk-Vzi"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="We've sent you a verification code" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8DL-NG-yGU">
-                    <frame key="frameInset" minX="160" minY="110" width="280" height="100"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="We've sent you a verification code" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8DL-NG-yGU">
+                    <rect key="frame" x="47.5" y="110" width="280" height="100"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="100" id="RN8-F7-ylq"/>
                         <constraint firstAttribute="width" constant="280" id="vID-Rp-pBv"/>
@@ -52,8 +55,8 @@
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GpB-HN-YI8">
-                    <frame key="frameInset" minX="140" minY="218" width="320" height="21"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GpB-HN-YI8">
+                    <rect key="frame" x="27.5" y="218" width="320" height="21"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="320" id="9it-s9-tPB"/>
                         <constraint firstAttribute="height" constant="21" id="l7o-Kk-oDK"/>
@@ -70,8 +73,8 @@
                     </attributedString>
                     <nil key="highlightedColor"/>
                 </label>
-                <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="A3q-2m-3Rg">
-                    <frame key="frameInset" minX="30" minY="377" width="540" height="42"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="A3q-2m-3Rg">
+                    <rect key="frame" x="30" y="377" width="315" height="42"/>
                     <color key="backgroundColor" red="0.96862745100000003" green="0.58039215690000001" blue="0.21960784310000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="42" id="GrC-Og-G3c"/>
@@ -82,8 +85,8 @@
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </view>
-                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F0n-B1-XQp">
-                    <frame key="frameInset" minX="30" minY="377" width="540" height="40"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F0n-B1-XQp">
+                    <rect key="frame" x="30" y="377" width="315" height="40"/>
                     <color key="backgroundColor" red="0.95686274509803915" green="0.69019607843137254" blue="0.22745098039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="280" id="Jx5-lP-BpK"/>
@@ -102,8 +105,8 @@
                         <action selector="clickOnGotItButton:" destination="-1" eventType="touchUpInside" id="Wu4-1E-8TP"/>
                     </connections>
                 </button>
-                <textField hidden="YES" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Vat-uq-VUl">
-                    <frame key="frameInset" minX="30" minY="214" width="540" height="40"/>
+                <textField hidden="YES" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Vat-uq-VUl">
+                    <rect key="frame" x="30" y="214" width="315" height="40"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="280" id="1h3-uh-xpX"/>
                         <constraint firstAttribute="height" constant="40" id="end-TZ-Q6z"/>
@@ -119,8 +122,8 @@
                         <outlet property="delegate" destination="-1" id="fBL-Te-TaU"/>
                     </connections>
                 </textField>
-                <button hidden="YES" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aKg-ku-OcO">
-                    <frame key="frameInset" minX="253" minY="274" width="95" height="30"/>
+                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aKg-ku-OcO">
+                    <rect key="frame" x="140" y="274" width="95" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="I4p-wr-5do"/>
                         <constraint firstAttribute="width" constant="95" id="iC4-aq-eXZ"/>
@@ -140,8 +143,8 @@
                         <action selector="clickOnResentCodeButton:" destination="-1" eventType="touchUpInside" id="uFq-yd-zad"/>
                     </connections>
                 </button>
-                <button hidden="YES" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0wM-Li-Y8L">
-                    <frame key="frameInset" minX="277" minY="441" width="46" height="20"/>
+                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0wM-Li-Y8L">
+                    <rect key="frame" x="164.5" y="441" width="46" height="20"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="20" id="1RL-Te-PCX"/>
                         <constraint firstAttribute="width" constant="46" id="cL4-h2-iRW"/>
@@ -161,8 +164,8 @@
                         <action selector="clickOnBackButton:" destination="-1" eventType="touchUpInside" id="I2k-mC-Gj6"/>
                     </connections>
                 </button>
-                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Code does not match" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YnB-er-ZmT">
-                    <frame key="frameInset" minX="171" minY="195" width="258" height="21"/>
+                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Code does not match" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YnB-er-ZmT">
+                    <rect key="frame" x="58.5" y="195" width="258" height="21"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="21" id="ef4-W7-OZY"/>
                         <constraint firstAttribute="width" constant="258" id="tNL-i6-SX6"/>
@@ -208,7 +211,7 @@
                     <exclude reference="6d7-X8-5dK"/>
                 </mask>
             </variation>
-            <point key="canvasLocation" x="437" y="348"/>
+            <point key="canvasLocation" x="559" y="37"/>
         </view>
         <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="uGA-hE-bS8">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -225,6 +228,6 @@
         </toolbar>
     </objects>
     <resources>
-        <image name="savivo-logo.png" width="84" height="84"/>
+        <image name="savivo-logo.png" width="84" height="85"/>
     </resources>
 </document>
