Made Multiline label on Stat view

--- a/Savio/ProgressView/SAProgressViewController.xib
+++ b/Savio/ProgressView/SAProgressViewController.xib
@@ -131,7 +131,7 @@
                         </mask>
                     </variation>
                 </view>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sony DSCW800Digital Compact Camera (20.1 MP, 5x Optical Zoom) - Black" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NOE-MR-nos">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My saving plan" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NOE-MR-nos">
                     <rect key="frame" x="20" y="45" width="374" height="46"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="46" id="2qC-zV-lgU"/>
